--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,64 +1,12 @@
 languageCode = "en"
 languageName = "English"
 weight = 1
-
-title = "Blowfish"
+title = "Davide Carnemolla"
 
 [params]
-  displayName = "EN"
-  isoCode = "en"
-  rtl = false
-  # logo = "img/logo.png"
-  description = "My awesome website"
-  # copyright = "Copy, _right?_ :thinking_face:"
-  dateFormat = "2 January 2006"
-
-[params.author]
-  name = "Davide Carnemolla"
-  image = "img/blowfish_logo.png"
-  headline = "I'm only human"
-  bio = "A little bit about you"
-  links = [
-    { email = "mailto:davide.carnemolla@phd.unict.it" },
-  #   { link = "https://link-to-some-website.com/" },
-  #   { amazon = "https://www.amazon.com/hz/wishlist/ls/wishlist-id" },
-  #   { apple = "https://www.apple.com" },
-  #   { blogger = "https://username.blogspot.com/" },
-  #   { codepen = "https://codepen.io/username" },
-  #   { dev = "https://dev.to/username" },
-  #   { discord = "https://discord.gg/invitecode" },
-  #   { dribbble = "https://dribbble.com/username" },
-  #   { facebook = "https://facebook.com/username" },
-  #   { flickr = "https://www.flickr.com/photos/username/" },
-  #   { foursquare = "https://foursquare.com/username" },
-    { github = "https://github.com/Herbrant" },
-  #   { gitlab = "https://gitlab.com/username" },
-    { google = "https://scholar.google.com/citations?user=RcK0fhIAAAAJ" },
-  #   { hashnode = "https://username.hashnode.dev" },
-  #   { instagram = "https://instagram.com/username" },
-  #   { keybase = "https://keybase.io/username" },
-  #   { kickstarter = "https://www.kickstarter.com/profile/username" },
-  #   { lastfm = "https://lastfm.com/user/username" },
-    { linkedin = "https://www.linkedin.com/in/davide-carnemolla/" },
-  #   { mastodon = "https://mastodon.instance/@username" },
-  #   { medium = "https://medium.com/username" },
-  #   { microsoft = "https://www.microsoft.com/" },
-    { orcid = "https://orcid.org/0009-0001-2575-0874" },
-  #   { patreon = "https://www.patreon.com/username" },
-  #   { pinterest = "https://pinterest.com/username" },
-  #   { reddit = "https://reddit.com/user/username" },
-  #   { researchgate = "https://www.researchgate.net/profile/username" },
-  #   { slack = "https://workspace.url/team/userid" },
-  #   { snapchat = "https://snapchat.com/add/username" },
-  #   { soundcloud = "https://soundcloud.com/username" },
-  #   { stack-overflow = "https://stackoverflow.com/users/userid/username" },
-  #   { steam = "https://steamcommunity.com/profiles/userid" },
-    { telegram = "https://t.me/Herbrant" },
-  #   { tiktok = "https://tiktok.com/@username" },
-  #   { tumblr = "https://username.tumblr.com" },
-  #   { twitch = "https://twitch.tv/username" },
-  #   { twitter = "https://twitter.com/username" },
-  #   { whatsapp = "https://wa.me/phone-number" },
-  #   { youtube = "https://youtube.com/username" },
-  #   { ko-fi = "https://ko-fi.com/username" },
-  ]
+displayName = "EN"
+isoCode = "en"
+rtl = false
+description = "Davide Carnemolla's Portfolio"
+dateFormat = "2 January 2006"
+author = { name = "Davide Carnemolla", image = "img/blowfish_logo.png", headline = "I'm only human", bio = "A little bit about you", links = [ { email = "mailto:davide.carnemolla@phd.unict.it" }, { github = "https://github.com/Herbrant" }, { google = "https://scholar.google.com/citations?user=RcK0fhIAAAAJ" }, { linkedin = "https://www.linkedin.com/in/davide-carnemolla/" }, { orcid = "https://orcid.org/0009-0001-2575-0874" }, { telegram = "https://t.me/Herbrant" } ] }
