updated secondary pages style

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -30,14 +30,14 @@ layoutBackgroundBlur = false
 showDate = false
 showDateUpdated = false
 showAuthor = false
-showHero = true
-heroStyle = "background"
-showBreadcrumbs = true
-showDraftLabel = true
+showHero = false
+heroStyle = "basic"
+showBreadcrumbs = false
+showDraftLabel = false
 showEdit = false
-editAppendPath = true
+editAppendPath = false
 seriesOpened = false
-showHeadingAnchors = true
+showHeadingAnchors = false
 showPagination = false
 invertPagination = false
 showReadingTime = false
@@ -45,7 +45,7 @@ showTableOfContents = true
 showTaxonomies = false
 showAuthorsBadges = false
 showWordCount = false
-showSummary = true
+showSummary = false
 sharingLinks = []
 
 [list]
