removed table of contents

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -41,7 +41,7 @@ showHeadingAnchors = false
 showPagination = false
 invertPagination = false
 showReadingTime = false
-showTableOfContents = true
+showTableOfContents = false
 showTaxonomies = false
 showAuthorsBadges = false
 showWordCount = false
